# serialCommunication2Slave

./: .gitignore  CMakeLists.txt  Frame.cpp  Frame.h  GenerateAlgorithm.cpp  GenerateAlgorithm.h  Header.cpp  Header.h  SeiralComunication.cpp  SeiralComunication.h  main.cpp
